[workspace]
resolver = "2"
members = [
  "swaptrade-contracts/counter",
  "swaptrade-contracts/soroban-ping",
]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "fat"
rpath = false
incremental = false

[profile.release-with-logs]
inherits = "release"
debug-assertions = true



